# Streamlit-SQL-Testing

./: README.md  app.py  consts.py  pyproject.toml  query.py  requirements.txt
