[project]
name = "streamlit-sql-testing"
version = "0.1.0"
description = "Attempting to recreate the basic functionality of Dune in streamlit."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb~=1.1",
    "minio>=7.2.10",
    "python-dotenv~=1.0.1",
    "streamlit-ace~=0.1.1",
    "streamlit~=1.39",
]

[tool.uv]
dev-dependencies = [
  "black~=24.8",
]
